# nix-proj

./: README.md  default.nix  nix-proj.cabal  nix-proj.hs  release.nix  shell.nix
