name:                nix-proj
version:             0.1.0.0
synopsis:            Manage Nix project files
license:             GPL-2
license-file:        LICENSE
author:              Edward Tjörnhammar
maintainer:          ed@cflags.cc
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable nix-proj
  main-is:             nix-proj.hs
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <4.9
                     , ConfigFile >= 1.1
                     , directory >= 1.2.2
                     , filepath >= 1.4
                     , mtl >= 2.2
                     , process >= 1.2
                     , unix-compat >= 0.4
